# wgpu-test

./: Cargo.toml  build.rs
examples/: adapter.rs
src/: camera.rs  instance.rs  lib.rs  model.rs  resources.rs  shader.wgsl  texture.rs
